fix table of contents footer overlap

--- a/frontend/app/toc/toc.module.scss
+++ b/frontend/app/toc/toc.module.scss
@@ -3,11 +3,12 @@
   counter-reset: sublist-counter;
 
   &__container {
-    position: fixed;
     z-index: 1;
     top: 5rem;
     width: 13.75rem;
     left: 0.75rem;
+    position: fixed;
+    margin-bottom: 1.5rem;
 
     // @media screen and (max-width: 800px) {
     //   height: 2rem;
@@ -74,8 +75,12 @@
 }
 
 .minimal {
+  position: sticky;
+  margin-top: -2rem;
+  top: 6rem;
   @media screen and (max-width: 800px) {
     position: relative;
     top: 0;
+    margin-top: 0;
   }
 }
